--- a/literature.bib
+++ b/literature.bib
@@ -64,7 +64,7 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
   doi = {10.1023/A:1007751112669}
 }
 
-@inproceedings{lime,
+@inproceedings{2-5-lime,
   author    = {Marco Tulio Ribeiro and
                Sameer Singh and
                Carlos Guestrin},
@@ -95,7 +95,7 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
   year={1999}
 }
 
-@article{xailandscape,
+@article{2-5-xailandscape,
       title={Landscape of R packages for eXplainable Artificial Intelligence}, 
       author={Szymon Maksymiuk and Alicja Gosiewska and Przemyslaw Biecek},
       year={2020},
@@ -106,7 +106,7 @@ eprint = { https://www.tandfonline.com/doi/pdf/10.2307/143400}
       URL={https://arxiv.org/abs/2009.13248}
 }
 
-@article{iBreakDown,
+@article{2-5-iBreakDown,
     title={{Do Not Trust Additive Explanations}},
     author={Alicja Gosiewska and Przemyslaw Biecek},
     year={2019},
@@ -143,7 +143,7 @@ series = {ICMLC 2018}
   title = {{Artificial Intelligence and Machine Learning : Current Applications in Real Estate}}
 }
 
-@article{XAI,
+@article{2-5-XAI,
 title = "Explainable Artificial Intelligence (XAI): Concepts, taxonomies, opportunities and challenges toward responsible AI",
 journal = "Information Fusion",
 volume = "58",
