--- a/2-5-california.Rmd
+++ b/2-5-california.Rmd
@@ -71,7 +71,7 @@ Another example is the article written by Robin A. Dubin [@2-5-neighborhood4]. H
 
 ### Local explanations
 
-Local explanations tells us, how model behaves in the area near given observation. Hence, it can not be used to explain how model works for whole set. On the other hand, it is useful to find out what can be done to change model's prediction for observations we already have in our data set.
+Local explanations tells us, how model behaves in the area near given observation. Hence, it can not be used to explain how model works for whole set. It is useful to find out what can be done to change model's prediction for observations we already have in our data set.
 We used observation 1 and 2000, because they are far from each other in the set so that they have different value.The location of the selected property is shown on the map \@ref(fig:2-5-local-map)
 
 ```{r 2-5-local-map,out.width="1000", fig.align="center", echo=FALSE, fig.cap='Choosen observations presented on a map. Red point - observation 1, green point - observation 2000'}
@@ -88,7 +88,7 @@ The basic idea is to calculate the contribution of variable in prediction of $f(
 knitr::include_graphics('images/2-5-BreakDownProfile.png')
 ```
 
-Figure \@ref(fig:2-5-BreakDownProfile) shows the result of using Break Down method from DALEX [@dalex] package.
+Figure \@ref(fig:2-5-BreakDownProfile) shows the result of using Break Down method from DALEX [@2-3-dalex] package.
 The variables are ranked in terms of the importance of their impact on the predictions. The most important characteristic for both properties is `median income`. Median income is indicative of neighborhood status. Residents who earn more are likely to purchase more expensive properties. For both observations the influences are strong but opposite, high earnings for the first observation at \$83,000 per year have a positive influence. In contrast, for property number 2000, earnings around \$15 thousand per year are the reason why the model lowers the predicted price. 
 `Longitude` is the second significant feature. Average number of rooms and location relative to the ocean was also significant. Interestingly, in observation number 2000, the inland location raises the price. From the map \@ref(fig:2-5-HeatmapOfMedianHouseValue), it appears that it is the homes farthest from the ocean that are the cheapest.
 
@@ -96,7 +96,7 @@ The variables are ranked in terms of the importance of their impact on the predi
 
 Local Interpretable Model-agnostic Explanations (LIME) was firstly proposed by Ribeiro, Singh, and Guestrin [@2-5-lime].
 
-In LIME decomposition, our goal is to create an approximate glass-box model for a given observation. That model would be fully human-readable and can be easier analyzed. To do so, we create an artificial data set and teach the chosen glass-box model on it. The coefficients on the variables for the created model are the coefficients on the validity of the variables for our observation.
+In LIME decomposition, our goal is to create an approximate glass-box model for an area around given observation. That model would be fully human-readable and can be easier analyzed. To do so, we create an artificial data set and teach the chosen glass-box model on it. The coefficients on the variables for the created model are the coefficients on the validity of the variables for our observation.
 
 ```{r 2-5-lime, out.width="1000", fig.align="center", echo=FALSE, fig.cap='Lime decomposition  (L) observation 1, (R) observation 2000'}
 knitr::include_graphics('images/2-5-lime.png')
