--- a/2-5-california.Rmd
+++ b/2-5-california.Rmd
@@ -80,7 +80,7 @@ Break down provides a way to show the local importance of variables and the effe
 The basic idea is to calculate the contribution of variable in prediction of $f(x)$ as changes in the expected model response given other variables. This means that we start with the mean expected model response of the model, successively adding variables to the conditioning. Of course, the order in which the variables are arranged also influences the contribution values.
 
 
-```{r 2-5-BreakDownProfile,out.width="100%", fig.align="center", echo=FALSE, fig.cap='Break Down decomposition (L) observation 1, (R) observation 2000'}
+```{r 2-5-BreakDownProfile,out.width="100%", fig.align="center", echo=FALSE, fig.cap='Break Down decomposition for (L) observation 1, (R) observation 2000. Model is a random forest. Bars show the contributions of the variables. Green indicates positive impact on the house value, while red indicates negative impact. First bar starts at the value of the mean expected model response. The last,blue bar indicates the difference between this mean response and the model prediction for the choosen observation. '}
 knitr::include_graphics('images/2-5-BreakDownProfile.png')
 ```
 
@@ -94,7 +94,7 @@ Local Interpretable Model-agnostic Explanations (LIME) was firstly proposed by R
 
 In LIME decomposition, our goal is to create an approximate glass-box model for an area around given observation. That model would be fully human-readable and can be easier analyzed. To do so, we create an artificial data set and teach the chosen glass-box model on it. The coefficients on the variables for the created model are the coefficients on the validity of the variables for our observation.
 
-```{r 2-5-lime, out.width="1000", fig.align="center", echo=FALSE, fig.cap='Lime decomposition  (L) observation 1, (R) observation 2000'}
+```{r 2-5-lime, out.width="1000", fig.align="center", echo=FALSE, fig.cap='Lime decomposition for (L) observation 1, (R) observation 2000. Model is a random forest. The size of the bar indicates the magnitude of the the estimated coefficient. Features with blue bar have positive sign of the estimated coefficient and feature with red bar have negative sign of the estimated coefficient. '}
 knitr::include_graphics('images/2-5-lime.png')
 ```
 
@@ -110,7 +110,7 @@ What is interesting, in the case 2000 above \@ref(fig:2-5-BreakDownProfile) Brea
 
 <center>
  
-```{r 2-5-single-ceteris, echo=FALSE, fig.cap="Ceteris Paribus: first observation", out.width = '100%'}
+```{r 2-5-single-ceteris, echo=FALSE, fig.cap="Ceteris Paribus profiles for the first observation. Blue dot is the actual value of the variable for this observation. The line indicates the change in prediction when the value of the variable changes.", out.width = '100%'}
 knitr::include_graphics("images/2-5-single-ceteris.png")
 ```
 </center>
@@ -119,7 +119,7 @@ Plot \@ref(fig:2-5-single-ceteris) above shows *Ceteris Paribus* calculated for 
 
 <center>
  
-```{r 2-5-double-ceteris, echo=FALSE, fig.cap="Ceteris Paribus: first and 2000th observation", out.width = '100%'}
+```{r 2-5-double-ceteris, echo=FALSE, fig.cap="Ceteris Paribus profiles for the first and 2000th observation. Blue line indicates changes for first observation and green indicates changes for 2000th observation. Dots are actual values of the variables for observations. ", out.width = '100%'}
 knitr::include_graphics("images/2-5-double-ceteris.png")
 ```
 </center>
